# kr-quant

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: make_figures.py
src/kiwoom_quant/: __init__.py  storage.py
src/kiwoom_quant/collectors/: supply_demand.py
src/kiwoom_quant/viz/: __init__.py
src/kr_quant/: __init__.py  storage.py
src/kr_quant/collectors/: supply_demand.py
src/kr_quant/strategies/: __init__.py  accumulation.py  backtest.py
src/kr_quant/viz/: portfolio.py  supply_demand_chart.py
tests/: test_accumulation.py  test_backtest.py  test_storage.py
