[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kiwoom-quant"
version = "0.1.0"
description = "키움 수급·시세 데이터 수집 및 퀀트 분석 (kiwoom-client 기반)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["kiwoom", "키움", "quant", "퀀트", "supply-demand", "수급", "kospi", "kosdaq"]
authors = [{ name = "Younghwan Chae", email = "chyohw97@gmail.com" }]
dependencies = [
    # auth 로그인 수정이 포함된 0.1.14 이상 필요. 미배포 시 README 의 개발 설정 참고.
    "kiwoom-client>=0.1.14",
    "pandas>=2.0",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.8"]
dev = ["pytest>=8.0", "ruff>=0.6", "matplotlib>=3.8"]

[project.scripts]
kq-collect = "kiwoom_quant.collectors.supply_demand:main"
kq-screen = "kiwoom_quant.strategies.accumulation:main"
kq-chart = "kiwoom_quant.viz.supply_demand_chart:main"

[project.urls]
Repository = "https://github.com/younghwan91/kiwoom-quant"

[tool.hatch.build.targets.wheel]
packages = ["src/kiwoom_quant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
